Ordinamenti per data fatti. contestazione spesa funzionante.